Small, code based improvements
Changed the way of URL creation